--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
 
-<img src="IMG/Logo.png" style="width:75%; height: 75%;">
+<img src="IMG/Logo.png" style="width:110%; height: 105%; margin-left: -20px;">
 
         </div>
         <div class="search-bar">
