--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online</title>
+    <title>Tienda Online/Cloffy.rd</title>
     <link rel="stylesheet" href="CSS/Css.css">
 </head>
 <body>
     <header>
         <div class="logo">
 
-<img src="IMG/Logo.png" style="width:125%; height: 120%; margin-left: -28%;">
+<img src="IMG/Logo san valentin.jpeg" style="width:125%; height: 120%; margin-left: -23%;">
 
         </div>
         <div class="search-bar">
@@ -23,16 +23,15 @@
         <div class="nav-container">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
+                <li><a href="Productos.html">Productos</a></li>
                 <li class="dropdown">
                     <a href="#">Servicios</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">WhatsApp</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Facebook</a></li>
+                        <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale">WhatsApp</a></li>
+                        <li><a href="https://www.instagram.com/cloffy.rd?igsh=NHowMG9nczYyeThj">Instagram</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -84,23 +83,22 @@
             <div class="footer-section links">
                 <h3>Enlaces Rápidos</h3>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Productos.html">Productos</a></li>
+                    <li><a href="https://www.instagram.com/cloffy.rd?igsh=NHowMG9nczYyeThj">Servicios</a></li>
+                    <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-section social">
                 <h3>Síguenos</h3>
                 <ul>
-                    <li><a href="#" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Facebook</a></li>
-                    <li><a href="#" target="_blank">WhatsApp</a></li>
+                    <li><a href="https://www.instagram.com/cloffy.rd?igsh=NHowMG9nczYyeThj" target="_blank">Instagram</a></li>
+                    <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale" target="_blank">WhatsApp</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Cloffy Elegance & Style. Todos los derechos reservados.</p>
+            <p>&copy; 2025 Cloffy Elegance & Style. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
