--- a/Productos.html
+++ b/Productos.html
@@ -53,14 +53,12 @@
             <img src="IMG/cadenas.jpeg" alt="Producto 1">
             <h3> Pulceras para chicas</h3>
             <p>Pulceras en estilos de flores, gemas y lisas.</p>
-            <button onclick="addToCart('Pulceras para chicas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 1')">Ver más</button>
         </div>
         <div class="card" data-name="Cadenitas">
             <img src="IMG/cadenas en formas.jpeg" alt="Producto 2">
             <h3>Cadenitas</h3>
             <p>Cadenitas con diferentes formas</p>
-            <button onclick="addToCart('Cadenitas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
 
@@ -68,64 +66,55 @@
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
 
-        <div class="card" data-name="Artes">
+        <div class="card" data-name="Aretes">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Aretes</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Guillos">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Guillos</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Anillos">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Anillos</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Collar">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Collares</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Bodys">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Bodys</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Tops">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Tops</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Sets">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Sets</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Combos temporada">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Combos temporada</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         
