--- a/index.html
+++ b/index.html
@@ -56,22 +56,21 @@
             <button onclick="addToCart('Pulceras para chicas', 10)">Agregar al carrito</button>
             <button onclick="viewMore('Pulceras para chicas')">Ver más</button>
         </div>
-        <div class="card" data-name="Cadenitas">
+        <div class="card" data-name="Pulceras para chicas" data-price="10">
             <img src="IMG/cadenas en formas.jpeg" alt="Producto 2">
             <h3>Cadenitas</h3>
             <p>Cadenitas con diferentes formas</p>
-            <button onclick="addToCart('Cadenitas')">Agregar al carrito</button>
+            <button onclick="addToCart('Cadenitas', 10)">Agregar al carrito</button>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
 
-        <div class="card" data-name="Argollas">
+        <div class="card" data-name="Pulceras para chicas" data-price="10">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas')">Agregar al carrito</button>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <button onclick="addToCart('Argollas', 10)">Agregar al carrito</button>
+            <button href="#" onclick="viewMore('Producto 2')">Ver más</button>
         </div>
-        <!-- Agrega más cards según sea necesario -->
     </main>
 
     <script src="JS/JS.JS"></script>
