--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <li class="dropdown">
                     <a href="#">Servicios</a>
                     <ul class="dropdown-content">
-                        <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale">WhatsApp</a></li>
+                        <li><a href="https://wa.me/18292685367?text=Me%20interesa%20comprar%20algo%20que%20vi%20en%20su%20catalogo">WhatsApp</a></li>
                         <li><a href="https://www.instagram.com/cloffy.rd?igsh=NHowMG9nczYyeThj">Instagram</a></li>
                     </ul>
                 </li>
-                <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale">Contacto</a></li>
+                <li><a href="https://wa.me/18292685367?text=Me%20interesa%20comprar%20algo%20que%20vi%20en%20su%20catalogo">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -87,14 +87,14 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Productos.html">Productos</a></li>
                     <li><a href="https://www.instagram.com/cloffy.rd?igsh=NHowMG9nczYyeThj">Servicios</a></li>
-                    <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale">Contacto</a></li>
+                    <li><a href="https://wa.me/18292685367?text=Me%20interesa%20comprar%20algo%20que%20vi%20en%20su%20catalogo">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-section social">
                 <h3>Síguenos</h3>
                 <ul>
                     <li><a href="https://www.instagram.com/cloffy.rd?igsh=NHowMG9nczYyeThj" target="_blank">Instagram</a></li>
-                    <li><a href="https://wa.me/18292685367?text=I'm%20interested%20in%20your%20car%20for%20sale" target="_blank">WhatsApp</a></li>
+                    <li><a href="https://wa.me/18292685367?text=Me%20interesa%20comprar%20algo%20que%20vi%20en%20su%20catalogo" target="_blank">WhatsApp</a></li>
                 </ul>
             </div>
         </div>
