--- a/Productos.html
+++ b/Productos.html
@@ -50,10 +50,10 @@
 
     <main id="productContainer">
         <div class="card" data-name="Pulceras para chicas">
-            <img src="IMG/cadenas.jpeg" alt="Producto 1">
-            <h3> Pulceras para chicas</h3>
+            <img src="IMG/Pulsera.jpg" alt="Producto 1">
+            <h3> Pulseras para chicas</h3>
             <p>Pulceras en estilos de flores, gemas y lisas.</p>
-            <button onclick="viewMore('Producto 1')">Ver más</button>
+            <a href="Pulseras.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Cadenitas">
             <img src="IMG/cadenas en formas.jpeg" alt="Producto 2">
