--- a/Productos.html
+++ b/Productos.html
@@ -59,7 +59,7 @@
             <img src="IMG/cadenas en formas.jpeg" alt="Producto 2">
             <h3>Cadenitas</h3>
             <p>Cadenitas con diferentes formas</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Cadenas.html"><button>Ver más</button></a>
         </div>
 
         <div class="card" data-name="Argollas">
