--- a/Cadenas.html
+++ b/Cadenas.html
@@ -49,35 +49,100 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Pulseras para chicas Corazon" data-price="400">
+        <div class="card" data-name="Cadenas" data-price="400">
             <img src="IMG/Cadenas/1.jpg" alt="Pulceras para chicas">
             <h3>Cadenas</h3>
             <p>Precio und: RD$400.00</p>
             <p>Cadenas con diferentes diseños.</p>
             <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Pulceras para chicas mariposas" data-price="550">
-            <img src="IMG/Pulseras/1.jpg" alt="Producto 2">
-            <h3>Pulsera para chicas mariposas</h3>
-            <p>Precio: RD$550.00</p>
-            <p>Pulsera con diseño de mariposas.</p>
-            <button onclick="addToCart('Pulsera para chicas mariposa', 550)">Agregar al carrito</button>
+        <div class="card" data-name="Cadenas corazon" data-price="400">
+            <img src="IMG/Cadenas/4.png" alt="Producto 2">
+            <h3>Cadenas formas de corazon.</h3>
+            <p>Precio: RD$400.00</p>
+            <p>Cadenas en formas de corazon.</p>
+            <button onclick="addToCart('Cadenas formas de corazon', 400)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Pulseras/2.jpg" alt="Producto 2">
-            <h3>Pulseras para chicas trevol</h3>
-            <p>Precio: RD$650.00</p>
+        <div class="card" data-name="Pulceras para chica trevol" data-price="400">
+            <img src="IMG/Cadenas/2.jpg" alt="Producto 2">
+            <h3>Cadenas plateadas</h3>
+            <p>Precio: RD$400.00</p>
             <p>Pulsera con diseño de Trevol.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Cadenas plateadas', 400)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Pulseras/3.jpg" alt="Producto 2">
-            <h3>Pulsera para chicas trevol</h3>
-            <p>Precio: RD$650.00</p>
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/3.jpg" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$400.00</p>
             <p>Pulsera con diseño de Trevol.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/5.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$400.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+        
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/6.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/7.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/8.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/10.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/11.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+
+        <div class="card" data-name="Cadenas" data-price="400">
+            <img src="IMG/Cadenas/12.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/12.png" alt="Producto 2">
+            <h3>Cadenas</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
         </div>
     </main>
 
