--- a/Productos.html
+++ b/Productos.html
@@ -56,14 +56,14 @@
             <a href="Pulseras.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Cadenitas">
-            <img src="IMG/cadenas en formas.jpeg" alt="Producto 2">
+            <img src="IMG/Cadenas/1.jpg" alt="Producto 2">
             <h3>Cadenitas</h3>
             <p>Cadenitas con diferentes formas</p>
             <a href="Cadenas.html"><button>Ver más</button></a>
         </div>
 
         <div class="card" data-name="Argollas">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Argollas/1.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Argollas-arretes para lucir elegates</p>
             <button onclick="viewMore('Producto 2')">Ver más</button>
