--- a/Productos.html
+++ b/Productos.html
@@ -66,20 +66,20 @@
             <img src="IMG/Argollas/1.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Argollas.html"><button>Ver más</button></a>
         </div>
 
         <div class="card" data-name="Aretes">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Aretes/1.png" alt="Producto 2">
             <h3>Aretes</h3>
             <p>Argollas-arretes para lucir elegates</p>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Guillos">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Guillos/1.png" alt="Producto 2">
             <h3>Guillos</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Guillos.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Anillos">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
@@ -112,9 +112,9 @@
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Combos temporada">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Combos/1.png" alt="Producto 2">
             <h3>Combos temporada</h3>
-            <p>Argollas-arretes para lucir elegates</p>
+            <p>Combos de temporada de san valentin  </p>
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         
