--- a/Cadenas.html
+++ b/Cadenas.html
@@ -144,6 +144,30 @@
             <p>Pulsera con diseño de Trevol.</p>
             <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
         </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/13.png" alt="Producto 2">
+            <h3>Cadenas letras J</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/14.png" alt="Producto 2">
+            <h3>Cadenas letras E</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Cadenas" data-price="300">
+            <img src="IMG/Cadenas/15.png" alt="Producto 2">
+            <h3>Cadenas letras B</h3>
+            <p>Precio: RD$300.00</p>
+            <p>Pulsera con diseño de Trevol.</p>
+            <button onclick="addToCart('Cadenas doradas', 300)">Agregar al carrito</button>
+        </div>
     </main>
 
     <script src="JS/JS.JS"></script>
