--- a/Argollas.html
+++ b/Argollas.html
@@ -57,7 +57,7 @@
             <button onclick="addToCart('Pulsera para chicas corazon', 555)">Agregar al carrito</button>
         </div>
         <div class="card" data-name="Pulceras para chicas mariposas" data-price="000">
-            <img src="IMG/Guillos/2.png" alt="Producto 2">
+            <img src="IMG/Argollas/3.png" alt="Producto 2">
             <h3>Guillos formas de corazon</h3>
             <p>Precio: RD$---.00</p>
             <p>Pulsera con diseño de mariposas.</p>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="card" data-name="Pulceras para chica trevol" data-price="000">
-            <img src="IMG/Guillos/3.png" alt="Producto 2">
+            <img src="IMG/Argollas/4.png" alt="Producto 2">
             <h3>Guillos con formas de flores</h3>
             <p>Precio: RD$---.00</p>
             <p>Guillo con forma de flores blanco y negro.</p>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Guillos/4.png" alt="Producto 2">
+            <img src="IMG/Argollas/5.png" alt="Producto 2">
             <h3>Guillos con formas de flores</h3>
             <p>Precio: RD$650.00</p>
             <p>Guillo con forma de flores de colores.</p>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Guillos/5.png" alt="Producto 2">
+            <img src="IMG/Argollas/6.png" alt="Producto 2">
             <h3>Guillos con formas de arboles</h3>
             <p>Precio: RD$---.00</p>
             <p>Guillo con forma de arboles dorado.</p>
@@ -89,7 +89,23 @@
         </div>
 
         <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Guillos/6.png" alt="Producto 2">
+            <img src="IMG/Argollas/7.png" alt="Producto 2">
+            <h3>Guillos con formas de llaves</h3>
+            <p>Precio: RD$---.00</p>
+            <p>Guillo con forma de flores de llaves.</p>
+            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+            <img src="IMG/Argollas/8.png" alt="Producto 2">
+            <h3>Guillos con formas de llaves</h3>
+            <p>Precio: RD$---.00</p>
+            <p>Guillo con forma de flores de llaves.</p>
+            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+            <img src="IMG/Argollas/9.png" alt="Producto 2">
             <h3>Guillos con formas de llaves</h3>
             <p>Precio: RD$---.00</p>
             <p>Guillo con forma de flores de llaves.</p>
