--- a/Productos.html
+++ b/Productos.html
@@ -115,7 +115,7 @@
             <img src="IMG/Combos/1.png" alt="Producto 2">
             <h3>Combos temporada</h3>
             <p>Combos de temporada de san valentin  </p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Combos.html"><button>Ver más</button></a>
         </div>
         
         <!-- Agrega más cards según sea necesario -->
