--- a/Productos.html
+++ b/Productos.html
@@ -100,7 +100,7 @@
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Tops">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Tops/1.jpg" alt="Producto 2">
             <h3>Tops</h3>
             <p>Argollas-arretes para lucir elegates</p>
             <button onclick="viewMore('Producto 2')">Ver más</button>
