--- a/Bodys.html
+++ b/Bodys.html
@@ -49,51 +49,62 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Guillo sin formas" data-price="300">
-            <img src="IMG/Guillos/1.png" alt="Pulceras para chicas">
-            <h3>Guillo sin formas</h3>
-            <p>Precio: RD300.00</p>
+        <div class="card" data-name="bodys manga larga" data-price="450">
+            <img src="IMG/Bodys/1.jpg" alt="Pulceras para chicas">
+            <h3>Bodys Manga larga</h3>
+            <p>Precio: RD$450.00</p>
             <p>Pulsera con diseño de corazón.</p>
-            <button onclick="addToCart('Guillo sin formas', 300)">Agregar al carrito</button>
+            <button onclick="addToCart('bodys manga larga', 450)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Guillos formas de corazon" data-price="300">
-            <img src="IMG/Guillos/2.png" alt="Producto 2">
-            <h3>Guillos formas de corazon</h3>
-            <p>Precio: RD$300.00</p>
+        <div class="card" data-name="Bodys Manga larga" data-price="450">
+            <img src="IMG/Bodys/2.jpg" alt="Producto 2">
+            <h3>Body Manga larga</h3>
+            <p>Precio: RD$450.00</p>
             <p>Pulsera con diseño de mariposas.</p>
-            <button onclick="addToCart('GUillo fomras de corazaon', 300)">Agregar al carrito</button>
+            <button onclick="addToCart('Bodys manga larga', 450)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Guillos formas de flores" data-price="300">
-            <img src="IMG/Guillos/3.png" alt="Producto 2">
-            <h3>Guillos con formas de flores</h3>
-            <p>Precio: RD300.00</p>
+        <div class="card" data-name="Body manga larga" data-price="450">
+            <img src="IMG/Bodys/3.jpg" alt="Producto 2">
+            <h3>Body Manga Larga</h3>
+            <p>Precio: RD$450.00</p>
             <p>Guillo con forma de flores blanco y negro.</p>
-            <button onclick="addToCart('Guillos con formas de flores', 300)">Agregar al carrito</button>
+            <button onclick="addToCart('Body manga larga', 450)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Guillo con fomras de flores" data-price="300">
-            <img src="IMG/Guillos/4.png" alt="Producto 2">
-            <h3>Guillos con formas de flores</h3>
-            <p>Precio: RD$300.00</p>
-            <p>Guillo con forma de flores de colores.</p>
-            <button onclick="addToCart('Guillos con formas de flores', 300)">Agregar al carrito</button>
+
+        <div class="card" data-name="Body manga corta" data-price="400">
+            <img src="IMG/Bodys/4.jpg" alt="Producto 2">
+            <h3>Body Manga Corta</h3>
+            <p>Precio: RD$400.00</p>
+            <p>Guillo con forma de flores blanco y negro.</p>
+            <button onclick="addToCart('Body manga corta', 400)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Guillos con formas de arboles" data-price="300">
-            <img src="IMG/Guillos/5.png" alt="Producto 2">
-            <h3>Guillos con formas de arboles</h3>
-            <p>Precio: RD$300.00</p>
-            <p>Guillo con forma de arboles dorado.</p>
-            <button onclick="addToCart('Guillos con fomras de arboles', 300)">Agregar al carrito</button>
+
+        <div class="card" data-name="Body manga corta" data-price="400">
+            <img src="IMG/Bodys/5.jpg" alt="Producto 2">
+            <h3>Body Manga Corta</h3>
+            <p>Precio: RD$400.00</p>
+            <p>Guillo con forma de flores blanco y negro.</p>
+            <button onclick="addToCart('Body manga corta', 400)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Guillos con formas de llaves" data-price="300">
-            <img src="IMG/Guillos/6.png" alt="Producto 2">
-            <h3>Guillos con formas de llaves</h3>
-            <p>Precio: RD$300.00</p>
-            <p>Guillo con forma de flores de llaves.</p>
-            <button onclick="addToCart('Guillos con fomras de llaves', 300)">Agregar al carrito</button>
+
+        <div class="card" data-name="Body manga corta" data-price="400">
+            <img src="IMG/Bodys/6.jpg" alt="Producto 2">
+            <h3>Body Manga Corta</h3>
+            <p>Precio: RD$400.00</p>
+            <p>Guillo con forma de flores blanco y negro.</p>
+            <button onclick="addToCart('Body manga corta', 400)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Body manga corta" data-price="400">
+            <img src="IMG/Bodys/7.jpg" alt="Producto 2">
+            <h3>Body Manga Corta</h3>
+            <p>Precio: RD$400.00</p>
+            <p>Guillo con forma de flores blanco y negro.</p>
+            <button onclick="addToCart('Body manga corta', 400)">Agregar al carrito</button>
         </div>
     </main>
 
