--- a/Productos.html
+++ b/Productos.html
@@ -73,7 +73,7 @@
             <img src="IMG/Aretes/1.png" alt="Producto 2">
             <h3>Aretes</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Aretes.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Guillos">
             <img src="IMG/Guillos/1.png" alt="Producto 2">
@@ -94,22 +94,22 @@
             <button onclick="viewMore('Producto 2')">Ver más</button>
         </div>
         <div class="card" data-name="Bodys">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Bodys/1.jpg" alt="Producto 2">
             <h3>Bodys</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Bodys.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Tops">
             <img src="IMG/Tops/1.jpg" alt="Producto 2">
             <h3>Tops</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Tops.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Sets">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Sets/1.jpg" alt="Producto 2">
             <h3>Sets</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Sets.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Combos temporada">
             <img src="IMG/Combos/1.png" alt="Producto 2">
