--- a/Aretes.html
+++ b/Aretes.html
@@ -49,52 +49,21 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Guillo sin formas" data-price="300">
-            <img src="IMG/Guillos/1.png" alt="Pulceras para chicas">
+        <div class="card" data-name="Aretes" data-price="400">
+            <img src="IMG/Aretes/2.jpg" alt="Pulceras para chicas">
             <h3>Guillo sin formas</h3>
-            <p>Precio: RD300.00</p>
+            <p>Precio: RD$400.00</p>
             <p>Pulsera con diseño de corazón.</p>
-            <button onclick="addToCart('Guillo sin formas', 300)">Agregar al carrito</button>
+            <button onclick="addToCart('Aretes', 400)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Guillos formas de corazon" data-price="300">
-            <img src="IMG/Guillos/2.png" alt="Producto 2">
+        <div class="card" data-name="Aretes" data-price="550">
+            <img src="IMG/Aretes/3.jpg" alt="Producto 2">
             <h3>Guillos formas de corazon</h3>
-            <p>Precio: RD$300.00</p>
+            <p>Precio: RD$550.00</p>
             <p>Pulsera con diseño de mariposas.</p>
-            <button onclick="addToCart('GUillo fomras de corazaon', 300)">Agregar al carrito</button>
+            <button onclick="addToCart('Aretes', 550)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Guillos formas de flores" data-price="300">
-            <img src="IMG/Guillos/3.png" alt="Producto 2">
-            <h3>Guillos con formas de flores</h3>
-            <p>Precio: RD300.00</p>
-            <p>Guillo con forma de flores blanco y negro.</p>
-            <button onclick="addToCart('Guillos con formas de flores', 300)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Guillo con fomras de flores" data-price="300">
-            <img src="IMG/Guillos/4.png" alt="Producto 2">
-            <h3>Guillos con formas de flores</h3>
-            <p>Precio: RD$300.00</p>
-            <p>Guillo con forma de flores de colores.</p>
-            <button onclick="addToCart('Guillos con formas de flores', 300)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Guillos con formas de arboles" data-price="300">
-            <img src="IMG/Guillos/5.png" alt="Producto 2">
-            <h3>Guillos con formas de arboles</h3>
-            <p>Precio: RD$300.00</p>
-            <p>Guillo con forma de arboles dorado.</p>
-            <button onclick="addToCart('Guillos con fomras de arboles', 300)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Guillos con formas de llaves" data-price="300">
-            <img src="IMG/Guillos/6.png" alt="Producto 2">
-            <h3>Guillos con formas de llaves</h3>
-            <p>Precio: RD$300.00</p>
-            <p>Guillo con forma de flores de llaves.</p>
-            <button onclick="addToCart('Guillos con fomras de llaves', 300)">Agregar al carrito</button>
-        </div>
     </main>
 
     <script src="JS/JS.JS"></script>
