--- a/Argollas.html
+++ b/Argollas.html
@@ -49,67 +49,74 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Pulseras para chicas Corazon" data-price="000">
+        <div class="card" data-name="Argollas" data-price="000">
             <img src="IMG/Argollas/2.png" alt="Pulceras para chicas">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Pulsera con diseño de corazón.</p>
-            <button onclick="addToCart('Pulsera para chicas corazon', 555)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 555)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Pulceras para chicas mariposas" data-price="000">
+        <div class="card" data-name="Argollas" data-price="000">
             <img src="IMG/Argollas/3.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Pulsera con diseño de mariposas.</p>
-            <button onclick="addToCart('Pulsera para chicas mariposa', 550)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 550)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="000">
+        <div class="card" data-name="Argollas" data-price="000">
             <img src="IMG/Argollas/4.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Guillo con forma de flores blanco y negro.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Argollas" data-price="650">
             <img src="IMG/Argollas/5.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Guillo con forma de flores de colores.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Argollas" data-price="650">
             <img src="IMG/Argollas/6.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Guillo con forma de arboles dorado.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Argollas" data-price="650">
             <img src="IMG/Argollas/7.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Guillo con forma de flores de llaves.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Argollas" data-price="650">
             <img src="IMG/Argollas/8.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$550.00</p>
             <p>Guillo con forma de flores de llaves.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
+        <div class="card" data-name="Argollas" data-price="650">
             <img src="IMG/Argollas/9.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Precio: RD$55000</p>
             <p>Guillo con forma de flores de llaves.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
+        </div>
+        <div class="card" data-name="Argollas" data-price="650">
+            <img src="IMG/Argollas/4.jpg" alt="Producto 2">
+            <h3>Argollas</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Guillo con forma de flores de llaves.</p>
+            <button onclick="addToCart('Argollas', 650)">Agregar al carrito</button>
         </div>
     </main>
 
