--- a/Tops.html
+++ b/Tops.html
@@ -49,51 +49,27 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Pulseras para chicas Corazon" data-price="000">
-            <img src="IMG/Guillos/1.png" alt="Pulceras para chicas">
+        <div class="card" data-name="Tops" data-price="300">
+            <img src="IMG/Tops/1.jpg" alt="Pulceras para chicas">
             <h3>Guillo sin formas</h3>
-            <p>Precio: RD$--.00</p>
+            <p>Precio: RD$300.00</p>
             <p>Pulsera con diseño de corazón.</p>
-            <button onclick="addToCart('Pulsera para chicas corazon', 555)">Agregar al carrito</button>
+            <button onclick="addToCart('Top', 300)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Pulceras para chicas mariposas" data-price="000">
-            <img src="IMG/Guillos/2.png" alt="Producto 2">
+        <div class="card" data-name="Tops" data-price="300">
+            <img src="IMG/Tops/2.jpg" alt="Producto 2">
             <h3>Guillos formas de corazon</h3>
-            <p>Precio: RD$---.00</p>
+            <p>Precio: RD$300.00</p>
             <p>Pulsera con diseño de mariposas.</p>
-            <button onclick="addToCart('Pulsera para chicas mariposa', 550)">Agregar al carrito</button>
+            <button onclick="addToCart('Tops', 300)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chica trevol" data-price="000">
-            <img src="IMG/Guillos/3.png" alt="Producto 2">
+        <div class="card" data-name="Tops" data-price="300">
+            <img src="IMG/Tops/3.jpg" alt="Producto 2">
             <h3>Guillos con formas de flores</h3>
-            <p>Precio: RD$---.00</p>
+            <p>Precio: RD$300.00</p>
             <p>Guillo con forma de flores blanco y negro.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol', 650)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Guillos/4.png" alt="Producto 2">
-            <h3>Guillos con formas de flores</h3>
-            <p>Precio: RD$650.00</p>
-            <p>Guillo con forma de flores de colores.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Guillos/5.png" alt="Producto 2">
-            <h3>Guillos con formas de arboles</h3>
-            <p>Precio: RD$---.00</p>
-            <p>Guillo con forma de arboles dorado.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Pulceras para chica trevol" data-price="650">
-            <img src="IMG/Guillos/6.png" alt="Producto 2">
-            <h3>Guillos con formas de llaves</h3>
-            <p>Precio: RD$---.00</p>
-            <p>Guillo con forma de flores de llaves.</p>
-            <button onclick="addToCart('Pulsera para chicas trevol negro', 650)">Agregar al carrito</button>
+            <button onclick="addToCart('Tops', 300)">Agregar al carrito</button>
         </div>
     </main>
 
