--- a/Anillos.html
+++ b/Anillos.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
 
-<img src="IMG/Logo.jpeg" style="width:125%; height: 120%; margin-left: -23%;">
+<img src="IMG/Logo san valentin.jpeg" style="width:125%; height: 120%; margin-left: -23%;">
 
         </div>
         <div class="search-bar">
@@ -49,27 +49,35 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Pulceras para chicas" data-price="10">
-            <img src="IMG/Pulseras/1.jpg" alt="Pulceras para chicas">
-            <h3>Pulceras para chicas</h3>
-            <p>Pulceras en estilos de flores, gemas y lisas.</p>
-            <button onclick="addToCart('Pulceras para chicas', 10)">Agregar al carrito</button>
-            <button onclick="viewMore('Pulceras para chicas')">Ver más</button>
+        <div class="card" data-name="Sets" data-price="550">
+            <img src="IMG/Anillos/1.jpg" alt="Pulceras para chicas">
+            <h3>Sets</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de corazón.</p>
+            <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Pulceras para chicas" data-price="10">
-            <img src="IMG/Cadenas/1.jpg" alt="Producto 2">
-            <h3>Cadenitas</h3>
-            <p>Cadenitas con diferentes formas</p>
-            <button onclick="addToCart('Cadenitas', 10)">Agregar al carrito</button>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+        <div class="card" data-name="Sets" data-price="550">
+            <img src="IMG/Sets/2.jpg" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Pulsera con diseño de mariposas.</p>
+            <button onclick="addToCart('sets', 550)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Pulceras para chicas" data-price="10">
-            <img src="IMG/Argollas/1.png" alt="Producto 2">
-            <h3>Argollas</h3>
-            <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas', 10)">Agregar al carrito</button>
-            <button href="#" onclick="viewMore('Producto 2')">Ver más</button>
+        <div class="card" data-name="Set" data-price="550">
+            <img src="IMG/Sets/3.jpg" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Guillo con forma de flores blanco y negro.</p>
+            <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
+        </div>
+
+        <div class="card" data-name="Set" data-price="550">
+            <img src="IMG/Sets/4.jpg" alt="Producto 2">
+            <h3>Sets</h3>
+            <p>Precio: RD$550.00</p>
+            <p>Guillo con forma de flores blanco y negro.</p>
+            <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
         </div>
     </main>
 
