--- a/Productos.html
+++ b/Productos.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <img src="IMG/Logo san valentin.jpeg" style="width:125%; height: 120%; margin-left: -23%;" alt="Cloffy Elegance & Style">
+            <img src="IMG/Logo.jpeg" style="width:125%; height: 120%; margin-left: -23%;" alt="Cloffy Elegance & Style">
         </div>
         <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Buscar...">
@@ -82,10 +82,10 @@
             <a href="Guillos.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Anillos">
-            <img src="IMG/argollas.jpeg" alt="Producto 2">
+            <img src="IMG/Anillos/1.jpg" alt="Producto 2">
             <h3>Anillos</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Anillos.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Collar">
             <img src="IMG/argollas.jpeg" alt="Producto 2">
