--- a/Anillos.html
+++ b/Anillos.html
@@ -49,36 +49,20 @@
     <!-- Botón flotante del carrito -->
     <button class="floating-cart" onclick="toggleCart()">🛒</button>
     <main id="productContainer">
-        <div class="card" data-name="Sets" data-price="550">
+        <div class="card" data-name="Anillos" data-price="000">
             <img src="IMG/Anillos/1.jpg" alt="Pulceras para chicas">
-            <h3>Sets</h3>
-            <p>Precio: RD$550.00</p>
-            <p>Pulsera con diseño de corazón.</p>
-            <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
+            <h3>Anillos</h3>
+            <p>Precio: RD$-----</p>
+            <button onclick="addToCart('Anillo', 1)">Agregar al carrito</button>
         </div>
-        <div class="card" data-name="Sets" data-price="550">
-            <img src="IMG/Sets/2.jpg" alt="Producto 2">
-            <h3>Sets</h3>
-            <p>Precio: RD$550.00</p>
-            <p>Pulsera con diseño de mariposas.</p>
-            <button onclick="addToCart('sets', 550)">Agregar al carrito</button>
+        <div class="card" data-name="Anillos" data-price="000">
+            <img src="IMG/Anillos/2.jpg" alt="Producto 2">
+            <h3>Anillos</h3>
+            <p>Precio: RD$----</p>
+            <button onclick="addToCart('Anillo', 1)">Agregar al carrito</button>
         </div>
 
-        <div class="card" data-name="Set" data-price="550">
-            <img src="IMG/Sets/3.jpg" alt="Producto 2">
-            <h3>Sets</h3>
-            <p>Precio: RD$550.00</p>
-            <p>Guillo con forma de flores blanco y negro.</p>
-            <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
-        </div>
-
-        <div class="card" data-name="Set" data-price="550">
-            <img src="IMG/Sets/4.jpg" alt="Producto 2">
-            <h3>Sets</h3>
-            <p>Precio: RD$550.00</p>
-            <p>Guillo con forma de flores blanco y negro.</p>
-            <button onclick="addToCart('Sets', 550)">Agregar al carrito</button>
-        </div>
+       
     </main>
 
     <script src="JS/JS.JS"></script>
