--- a/index.html
+++ b/index.html
@@ -53,23 +53,22 @@
             <img src="IMG/Pulseras/1.jpg" alt="Pulceras para chicas">
             <h3>Pulceras para chicas</h3>
             <p>Pulceras en estilos de flores, gemas y lisas.</p>
-            <button onclick="addToCart('Pulceras para chicas', 10)">Agregar al carrito</button>
-            <button onclick="viewMore('Pulceras para chicas')">Ver más</button>
+            <a href="Pulseras.html"><button>Ver más</button></a>
         </div>
         <div class="card" data-name="Pulceras para chicas" data-price="10">
             <img src="IMG/Cadenas/1.jpg" alt="Producto 2">
-            <h3>Cadenitas</h3>
+            <h3>Cadenas</h3>
             <p>Cadenitas con diferentes formas</p>
-            <button onclick="addToCart('Cadenitas', 10)">Agregar al carrito</button>
-            <button onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Cadenas.html"><button>Ver más</button></a>
+
         </div>
 
         <div class="card" data-name="Pulceras para chicas" data-price="10">
             <img src="IMG/Argollas/1.png" alt="Producto 2">
             <h3>Argollas</h3>
             <p>Argollas-arretes para lucir elegates</p>
-            <button onclick="addToCart('Argollas', 10)">Agregar al carrito</button>
-            <button href="#" onclick="viewMore('Producto 2')">Ver más</button>
+            <a href="Argollas.html"><button>Ver más</button></a>
+
         </div>
     </main>
 
