--- a/Anillos.html
+++ b/Anillos.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
 
-<img src="IMG/Logo san valentin.jpeg" style="width:125%; height: 120%; margin-left: -23%;">
+<img src="IMG/Logo.jpeg" style="width:125%; height: 120%; margin-left: -23%;">
 
         </div>
         <div class="search-bar">
