--- a/Anillos.html
+++ b/Anillos.html
@@ -61,6 +61,18 @@
             <p>Precio: RD$----</p>
             <button onclick="addToCart('Anillo', 1)">Agregar al carrito</button>
         </div>
+        <div class="card" data-name="Anillos" data-price="000">
+            <img src="IMG/Anillos/3.jpg" alt="Producto 2">
+            <h3>Anillos</h3>
+            <p>Precio: RD$----</p>
+            <button onclick="addToCart('Anillo', 1)">Agregar al carrito</button>
+        </div>
+        <div class="card" data-name="Anillos" data-price="000">
+            <img src="IMG/Anillos/4.jpg" alt="Producto 2">
+            <h3>Anillos</h3>
+            <p>Precio: RD$----</p>
+            <button onclick="addToCart('Anillo', 1)">Agregar al carrito</button>
+        </div>
 
        
     </main>
